--- a/mysite/vercel.json
+++ b/mysite/vercel.json
@@ -1,7 +1,7 @@
 {
   "builds": [
     {
-      "src": "personal_portfolio/wsgi.py",
+      "src": "mysite/personal_portfolio/wsgi.py",
       "use": "@vercel/python",
       "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
     }
@@ -9,7 +9,7 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "personal_portfolio/wsgi.py"
+      "dest": "mysite/personal_portfolio/wsgi.py"
     }
   ]
 }
